feat: add responsive design

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -6,4 +6,5 @@ body{
       box-sizing: border-box;
       padding: 0;
       margin: 0;
+      background: linear-gradient(0deg, #d146fe 20%, #8650f6 80%);
 }
