--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -2,9 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-      box-sizing: border-box;
-      padding: 0;
-      margin: 0;
-      background: linear-gradient(0deg, #d146fe 20%, #8650f6 80%);
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+body {
+    background: linear-gradient(0deg, #d146fe 20%, #8650f6 80%);
 }
