feat: add favicon, rename title, add font family

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -9,4 +9,5 @@
 }
 body {
     background: linear-gradient(0deg, #d146fe 20%, #8650f6 80%);
+    font-family: "Lucida Sans", "Arial", sans-serif;
 }
